# rapidl-backend

./: .gitignore  README.md  build.sh  deploy.sh
.aws-sam/: build.toml
dependencies/: libmysqlclient.so.21Zone.Identifier
rust_app/: Cargo.toml
rust_app/aws-lambda-accounts-generate/: Cargo.toml
rust_app/aws-lambda-accounts-generate-retry/: Cargo.toml
rust_app/aws-lambda-accounts-generate-retry/src/: main.rs
rust_app/aws-lambda-accounts-generate/src/: main.rs
rust_app/aws-lambda-accounts-get-generated-content/: Cargo.toml
rust_app/aws-lambda-accounts-get-generated-content/src/: main.rs
rust_app/aws-lambda-accounts-get-generated-list/: Cargo.toml
rust_app/aws-lambda-accounts-get-generated-list/src/: main.rs
rust_app/aws-lambda-accounts-get-profile/: Cargo.toml
rust_app/aws-lambda-accounts-get-profile/src/: main.rs
rust_app/aws-lambda-accounts-login/: Cargo.toml
rust_app/aws-lambda-accounts-login/src/: main.rs
rust_app/aws-lambda-accounts-refresh-tokens/: Cargo.toml
rust_app/aws-lambda-accounts-refresh-tokens/src/: main.rs
rust_app/aws-lambda-accounts-send-verification-email/: Cargo.toml
rust_app/aws-lambda-accounts-send-verification-email/src/: main.rs
rust_app/aws-lambda-accounts-sign-out/: Cargo.toml
rust_app/aws-lambda-accounts-sign-out/src/: main.rs
rust_app/aws-lambda-accounts-sign-up/: Cargo.toml
rust_app/aws-lambda-accounts-sign-up/src/: main.rs
rust_app/aws-lambda-accounts-subscribe-newsletter/: Cargo.toml
rust_app/aws-lambda-accounts-subscribe-newsletter/src/: main.rs
rust_app/aws-lambda-accounts-verify/: Cargo.toml
rust_app/aws-lambda-accounts-verify/src/: main.rs
rust_app/aws-lambda-admin-support-list-ticket/: Cargo.toml
rust_app/aws-lambda-admin-support-list-ticket/src/: main.rs
rust_app/aws-lambda-admin-support-ticket/: Cargo.toml
rust_app/aws-lambda-admin-support-ticket/src/: main.rs
rust_app/aws-lambda-email-bounce-complaint-handler/: Cargo.toml
rust_app/aws-lambda-email-bounce-complaint-handler/src/: main.rs
rust_app/aws-lambda-email-bulk-sender/: Cargo.toml
rust_app/aws-lambda-email-bulk-sender/src/: main.rs
rust_app/aws-lambda-email-contacts-subscriber/: Cargo.toml
rust_app/aws-lambda-email-contacts-subscriber/src/: main.rs
rust_app/aws-lambda-email-support-response-handler/: Cargo.toml
rust_app/aws-lambda-email-support-response-handler/src/: main.rs
rust_app/aws-lambda-generate/: Cargo.toml
rust_app/aws-lambda-generate/src/: generate.rs  main.rs
rust_app/aws-lambda-generate/src/generate/: checker.rs  engine.rs  formatter.rs  helper.rs  oncelabel.rs  paper.rs  question.rs  questionstacker.rs
rust_app/aws-lambda-generate/src/generate/engine/: math.rs
rust_app/aws-lambda-generate/src/generate/engine/math/: mechanics.rs  pure.rs
rust_app/aws-lambda-generate/src/generate/engine/math/mechanics/: vectors.rs
rust_app/aws-lambda-generate/src/generate/engine/math/mechanics/suvat/: t1.rs
rust_app/aws-lambda-generate/src/generate/engine/math/mechanics/vectors/: t1.rs
rust_app/aws-lambda-support-send-contact/: Cargo.toml
rust_app/aws-lambda-support-send-contact/src/: main.rs
rust_app/common-types/: Cargo.toml
rust_app/common-types-accounts/: Cargo.toml
rust_app/common-types-accounts/src/: lib.rs  middleware.rs  routes.rs
rust_app/common-types-accounts/src/middleware/: extend_auth.rs  gen_new_auth.rs  request_describer.rs  revoke_auth.rs  revoke_auth_ignore_headers.rs  set_auth_to_headers.rs  set_cors_headers.rs  validate_access_auth.rs  validate_recaptcha_invisible.rs  validate_recaptcha_tick.rs
rust_app/common-types-accounts/src/routes/: contact.rs  generate.rs  generated.rs  get_profile.rs  ignore.rs  login.rs  send_verification.rs  signup.rs  subscribe_newsletter.rs  verify.rs
rust_app/common-types-accounts/src/routes/admin/: support.rs
rust_app/common-types-accounts/src/routes/admin/support/: list_ticket.rs  ticket.rs
rust_app/common-types-accounts/src/routes/admin/support/list_ticket/: db.rs
rust_app/common-types-accounts/src/routes/admin/support/ticket/: db.rs
rust_app/common-types-accounts/src/routes/contact/: db.rs
rust_app/common-types-accounts/src/routes/generate/: db.rs
rust_app/common-types-accounts/src/routes/login/: db.rs
rust_app/common-types-accounts/src/routes/signup/: db.rs
rust_app/common-types-accounts/src/routes/subscribe_newsletter/: db.rs
rust_app/common-types-accounts/src/routes/verify/: db.rs
rust_app/common-types/src/: lib.rs
rust_app/db-schema/: Cargo.toml
rust_app/db-schema/diesel/: models.rs  schema.rs
rust_app/db-schema/src/: lib.rs
