[package]
name = "aws-lambda-email-bounce-complaint-handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.1.7"
aws-sdk-lambda = "1.15.1"
aws-sdk-sqs = "1.15.0"
aws_lambda_events = "0.15.0"
dotenvy = "0.15.7"
lambda_runtime = "0.10.0"
lazy_static = "1.4.0"
openssl = { version = "0.10.61", features = ["vendored"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.35.0", default-features = false, features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt"] }

chrono = "0.4.31"
sha2 = "0.10.8"
hex = "0.4.3"
diesel = { version = "2.1.4", features = ["chrono"] }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
db-schema = { path = "../db-schema" }

common-types = { path = "../common-types" }
common-types-accounts = { path = "../common-types-accounts" }
