[package]
name = "aws-lambda-email-contacts-subscriber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.1.7"
aws-sdk-s3 = "1.17.0"
aws-sdk-sesv2 = "1.16.0"
aws-sdk-sqs = "1.15.0"
dotenvy = "0.15.7"
lambda_runtime = "0.10.0"
lazy_static = "1.4.0"
openssl = { version = "0.10.61", features = ["vendored"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.35.0", default-features = false, features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt"] }
common-types-accounts = { path = "../common-types-accounts" }
common-types = { path = "../common-types" }
