[package]
name = "aws-lambda-email-support-response-handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-normalization = "0.1.23"
aws-config = "1.1.7"
aws-sdk-s3 = "1.17.0"
aws-sdk-lambda = "1.15.1"
aws_lambda_events = "0.15.0"
mail-parser = "0.9.3"
chrono = "0.4.31"
dotenvy = "0.15.7"
lambda_runtime = "0.10.0"
lazy_static = "1.4.0"
openssl = { version = "0.10.61", features = ["vendored"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.35.0", default-features = false, features = ["macros", "rt-multi-thread"] }
diesel = { version = "2.1.4", features = ["chrono"] }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
futures-util = "0.3.30"
rustrict = "0.7.25"
tfidf-text-summarizer = "0.0.3"
db-schema = { path = "../db-schema" }
common-types = { path = "../common-types" }
common-types-accounts = { path = "../common-types-accounts" }
