[package]
name = "common-types-accounts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.4", features = ["macros"] }
axum-extra = { version = "0.8.0", features = ["cookie"] }
aws-config = "1.1.7"
aws-sdk-lambda = "1.15.1"
aws-sdk-sqs = "1.15.0"
aws-sdk-s3 = "1.17.0"
base64 = "0.22.0"
bcrypt = "0.15.0"
chrono = "0.4.31"
dispo = "0.1.1"
dotenvy = "0.15.7"
reqwest = { version = "0.11.23", features = ["json"] }
futures-util = "0.3.30"
hmac = "0.12.1"
lazy_static = "1.4.0"
sha2 = "0.10.8"
serde = "1.0.193"
serde_json = "1.0.108"
jwt = "0.16.0"
parking_lot = "0.12.1"
uuid = { version = "1.6.1", features = ["fast-rng", "v4", "serde"] }
tracing = { version = "0.1.40", features = ["log"] }
diesel = { version = "2.1.4", features = ["chrono"] }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
redis = { version = "0.24.0", default-features = false, features = ["tokio-native-tls-comp"] }
deadpool-redis = { version = "0.14.0", feautres = ["rt_tokio_1"] }
garde = "0.16.3"
thiserror = "1.0.56"
trust-dns-resolver = { version = "*", features = ["dns-over-rustls", "tokio-runtime"] }
tokio = { version = "1.35.0", default-features = false, features = ["macros", "rt-multi-thread"] }
tokio-postgres-rustls = "0.9.0"
tokio-postgres = "0.7.7"
rustls = "0.20.8"
rustls-native-certs = "0.6.2"
zxcvbn = "2.2.2"
openssl = { version = "0.10.61", features = ["vendored"] }
rustrict = "0.7.25"
tfidf-text-summarizer = "0.0.3"
hex = "0.4.3"
unicode-normalization = "0.1.23"
ammonia = "4.0.0"
common-types = { path = "../common-types" }
db-schema = { path = "../db-schema" }
