[package]
name = "common-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.4", features = ["macros"] }
serde = { version = "1.0.197", features = ["derive"] }
chrono = { version = "0.4.35", features = ["serde"] }
derive_builder = "0.20.0"
diesel = { version = "2.1.4", features = ["chrono"] }
db-schema = { path = "../db-schema" }
