[package]
name = "db-schema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.193"
diesel = { version = "2.1.4", features = ["chrono"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
